finished draft and publish view. appended temporary type field to shift object (not written to database), 	used to filter events to hide or show based on publish or draft fixed vertical issue again

--- a/public/stylesheets/dhtmlxscheduler.css
+++ b/public/stylesheets/dhtmlxscheduler.css
@@ -1747,6 +1747,7 @@ div.dhx_menu_head, div.dhx_menu_icon {
   border: none;
   border-left: 0;
   border-bottom: 0;
+  z-index: 5;
 }
 .dhx_scale_bar {
   border-left: 1px solid #e7e7e7;
@@ -2309,9 +2310,9 @@ div.dhx_menu_head, div.dhx_menu_icon {
 }
 
 .dhx_cal_navline{
-
   width:100%;
   height:59px;
   left:0px;
   top:0px;
+  background-color:#424242;
 }
