--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -201,6 +201,10 @@ margin:.5em auto;
 height: 5em;
 }
 
+.publish {
+  cursor:pointer;
+}
+
 .tab {
   height:40px;
   cursor: pointer;
@@ -214,7 +218,7 @@ height: 5em;
 #tab-mid {
   position: relative;
   display: inline-block;
-  margin-top:-32px;
+  margin-top:-33px;
   padding:0 15px;
   height:40px;
   line-height:40px;
@@ -237,14 +241,14 @@ height: 5em;
   position: relative;
   display:inline;
   left:50px;
-  opacity: .25;
+  opacity: 1;
 }
 
 #draft {
   position: relative;
   display:inline;
   left:25px;
-  opacity: 1;
+  opacity: .25;
 }
 
 #container {
@@ -257,7 +261,7 @@ height:-webkit-calc(100% - 6.5em);
 padding:0 1.5em 1.5em;
 }
 
-#scheduler_here{
+#scheduler{
 width:100%;
 height:100%;
 -webkit-box-sizing:border-box;
